examples/negative/pipes/pipe_ambiguous/mod_b.kai
# Issue #594 — second declarer of the same head name `Source[t]`.
# Two modules in scope export the same type name; the head-owner
# cache flags `Source` as ambiguous and the typer must reject the
# pipe with "ambiguous head type ... Use qualified type annotation".

pub type Source[t] = MkSrcB(t)

pub fn map[a, b, e](s: Source[a], f: (a) -> b / e) : Source[b] / e {
  match s {
    MkSrcB(v) -> MkSrcB(f(v))
  }
}
